--- a/SisCoVaPro/materia_prima/templates/recepcion_materia_prima/recepcion.html
+++ b/SisCoVaPro/materia_prima/templates/recepcion_materia_prima/recepcion.html
@@ -18,17 +18,18 @@
   </head>
   <body>
     <!-- Listado de recepciones -->
-    <div class="container my-4">
+    {%block content%}
+    <div class="container my-4 table-responsive-sm">
     <h1>Listado de recepciones</h1>
-    <table id="ex" class="table table-striped" style="width:100%">
+    <table id="ex" class="table table-striped table-hover " style="width:100%; background-color: white;">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Position</th>
-          <th>Office</th>
-          <th>Age</th>
-          <th>Start date</th>
-          <th>Salary</th>
+          <th>Nombre</th>
+          <th>Posición</th>
+          <th>Oficina</th>
+          <th>Edad</th>
+          <th>Fecha de  inicio</th>
+          <th>Salario</th>
         </tr>
       </thead>
       <tbody>
@@ -491,24 +492,50 @@
       </tbody>
       <tfoot>
         <tr>
-          <th>Name</th>
-          <th>Position</th>
-          <th>Office</th>
-          <th>Age</th>
-          <th>Start date</th>
-          <th>Salary</th>
+          <th>Nombre</th>
+          <th>Posición</th>
+          <th>Oficina</th>
+          <th>Edad</th>
+          <th>Fecha de inicio</th>
+          <th>Salario</th>
         </tr>
       </tfoot>
     </table>
 </div>
-    <script>
-      $(document).ready(function () {
-        $('#ex').DataTable()
-      })
-    </script>
+ 
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/2.0.2/js/dataTables.js"></script>
     <script src="https://cdn.datatables.net/2.0.2/js/dataTables.bootstrap5.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $('#ex').DataTable({
+          language: {
+            processing: "Procesando...",
+            search: "Buscar:",
+            lengthMenu: "Mostrar _MENU_ entradas",
+            info: "Mostrando de _START_ a _END_ de _TOTAL_ entradas",
+            infoEmpty: "Mostrando 0 a 0 de 0 entradas",
+            infoFiltered: "(filtrado de _MAX_ entradas totales)",
+            infoPostFix: "",
+            loadingRecords: "Cargando registros...",
+            zeroRecords: "No se encontraron registros",
+            emptyTable: "No hay datos disponibles en la tabla",
+            paginate: {
+              first: "Primero",
+              previous: "Anterior",
+              next: "Siguiente",
+              last: "Último"
+            },
+            aria: {
+              sortAscending: ": activar para ordenar la columna de manera ascendente",
+              sortDescending: ": activar para ordenar la columna de manera descendente"
+            }
+          }
+        });
+      });
+    </script>
+    {% endblock %}
   </body>
 </html>
