--- a/SisCoVaPro/templates/base.html
+++ b/SisCoVaPro/templates/base.html
@@ -1,12 +1,10 @@
-{%load static%}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{% block title %}Inicio{% endblock %} </title>
-
-  {% block estaticos %}
+  <title>{%block title%} Base {%endblock%}</title>
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
@@ -27,14 +25,17 @@
   <link rel="stylesheet" href="{% static 'css/daterangepicker.css'%}">
   <!-- summernote -->
   <link rel="stylesheet" href="{% static 'css/summernote-bs4.min.css'%}">
-  {% endblock %}
+    <!-- font awesome-->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="{% static 'img/logoLiconsa.png'%}" alt="logoLiconsa" height="60" width="60">
+    <img class="animation__shake" src="{% static 'img/logoLiconsa.png'%}" alt="AdminLTELogo" height="60" width="60">
   </div>
 
   <!-- Navbar -->
@@ -1472,33 +1473,31 @@
 <!-- ./wrapper -->
 
 <!-- jQuery -->
-<script src="{% static 'js/jquery/jquery.min.js'"></script>
+<script src="{% static 'js/jquery.min.js'%}"></script>
 <!-- jQuery UI 1.11.4 -->
 <script src="{% static 'js/jquery-ui.min.js'%}"></script>
 <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
 <script>
   $.widget.bridge('uibutton', $.ui.button)
 </script>
-
-{% block javascript %}
 <!-- Bootstrap 4 -->
 <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
 <!-- ChartJS -->
 <script src="{% static 'js/Chart.min.js'%}"></script>
 <!-- Sparkline -->
-<script src="plugins/sparklines/sparkline.js"></script>
+<script src="{% static 'js/sparkline.js'%}"></script>
 <!-- JQVMap -->
-<script src="plugins/jqvmap/jquery.vmap.min.js"></script>
+<script src="{% static 'js/jquery.vmap.min.js'%}"></script>
 <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
 <!-- jQuery Knob Chart -->
 <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
 <!-- daterangepicker -->
-<script src="plugins/moment/moment.min.js"></script>
-<script src="plugins/daterangepicker/daterangepicker.js"></script>
+<script src="{% static 'js/moment.min.js'%}"></script>
+<script src="{% static 'js/daterangepicker.js'%}"></script>
 <!-- Tempusdominus Bootstrap 4 -->
-<script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="{% static 'js/tempusdominus-bootstrap-4.min.js'%}"></script>
 <!-- Summernote -->
-<script src="plugins/summernote/summernote-bs4.min.js"></script>
+<script src="{% static 'js/summernote-bs4.min.js'%}"></script>
 <!-- overlayScrollbars -->
 <script src="{% static 'js/jquery.overlayScrollbars.min.js'%}"></script>
 <!-- AdminLTE App -->
@@ -1507,6 +1506,5 @@
 <script src="{% static 'js/demo.js'%}"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="{% static 'js/dashboard.js'%}"></script>
-{% endblock %}
 </body>
 </html>
