Modificar  de materia prima urls.py, views.py, templates/base.html , materia_prima/home.html

--- a/SisCoVaPro/ingreso/templates/registration/login.html
+++ b/SisCoVaPro/ingreso/templates/registration/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'css/unicons.css' %}" />
     <link rel="stylesheet" href="{% static 'libs/twitter-bootstrap/css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon" />
+    <link rel="icon" href="{% static 'img/logoLiconsaFavicon.jpeg' %}" type="image/x-icon" />
   </head>
 
   <body>
