--- a/SisCoVaPro/templates/base.html
+++ b/SisCoVaPro/templates/base.html
@@ -1,10 +1,12 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+{% block encabezado%}
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{%block title%} Base {%endblock%}</title>
+  {% block estaticos%}
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
@@ -28,14 +30,19 @@
     <!-- font awesome-->
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+  {%endblock%}
+    <!-- Favicon -->
+    {% block Favicon%}
+    <link rel="icon" href="{% static 'img/logoLiconsaFavicon.jpeg' %}" type="image/x-icon" />
+    {% endblock%}
 </head>
+{% endblock %}
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
 
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
-    <img class="animation__shake" src="{% static 'img/logoLiconsa.png'%}" alt="AdminLTELogo" height="60" width="60">
+    <img class="animation__wobble" src="{% static 'img/loaderLiconsa.png'%}" alt="logoLiconsa" height="60" width="60">
   </div>
 
   <!-- Navbar -->
@@ -1488,9 +1495,9 @@
 <script src="{% static 'js/sparkline.js'%}"></script>
 <!-- JQVMap -->
 <script src="{% static 'js/jquery.vmap.min.js'%}"></script>
-<script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+<script src="{% static 'plugins/jqvmap/maps/jquery.vmap.usa.js'%}"></script>
 <!-- jQuery Knob Chart -->
-<script src="plugins/jquery-knob/jquery.knob.min.js"></script>
+<script src="{% static 'plugins/jquery-knob/jquery.knob.min.js'%}"></script>
 <!-- daterangepicker -->
 <script src="{% static 'js/moment.min.js'%}"></script>
 <script src="{% static 'js/daterangepicker.js'%}"></script>
@@ -1503,8 +1510,8 @@
 <!-- AdminLTE App -->
 <script src="{% static 'js/adminlte.js'%}"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="{% static 'js/demo.js'%}"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<!-- <script src="{% static 'js/demo.js'%}"></script>
+ --><!-- AdminLTE dashboard demo (This is only for demo purposes) -->
 <script src="{% static 'js/dashboard.js'%}"></script>
 </body>
 </html>
