--- a/SisCoVaPro/materia_prima/templates/home.html
+++ b/SisCoVaPro/materia_prima/templates/home.html
@@ -1,6 +1,117 @@
 {% extends 'base.html'%}
+{% load static %}
 
 {% block title %}
 Materia Prima
 {% endblock %}
 
+
+
+
+{% block principal %}
+
+  <!-- Main page content-->
+  <div class="container-xl px-4 mt-5">
+   
+    <div class="row justify-content-center">
+      <div class="col-xl-4 mb-4 align-content-center">
+        <!-- Dashboard example card 2 -->
+        <a class="card lift h-100" href="{% url 'materia_prima:recepcion_materia_prima' %}">
+          <div class="card-body d-flex justify-content-center flex-column">
+            <div class="d-flex align-items-center justify-content-between">
+              <div class="me-3">
+                <h5>Recepción de materia prima</h5>
+                <div class="text-muted small">Proveedores</div>
+              </div>
+              <i class="feather-xl text-secondary mb-3" data-feather="box"></i>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-xl-4 mb-4 align-content-center">
+        <!-- Dashboard example card 3 -->
+        <a class="card lift h-100" href="{%url 'materia_prima:control_de_calidad'%}">
+          <div class="card-body d-flex justify-content-center flex-column">
+            <div class="d-flex align-items-center justify-content-between">
+              <div class="me-3">
+                <h5>Control de calidad</h5>
+                <div class="text-muted small">Descripción control de calidad</div>
+              </div>
+              <i class="feather-xl text-green mb-3" data-feather="tool"></i>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="col-xl-4 mb-4 align-content-center">
+        <!-- Dashboard example card 2 -->
+        <a class="card lift h-100" href="#">
+          <div class="card-body d-flex justify-content-center flex-column">
+            <div class="d-flex align-items-center justify-content-between">
+              <div class="me-3">
+                <h5>Almacenamiento</h5>
+                <div class="text-muted small">Condiciones</div>
+              </div>
+              <i class="feather-xl text-secondary mb-3" data-feather="archive"></i>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-6 mb-3">
+          <!-- Bar chart example-->
+          <div class="card h-100">
+              <div class="card-header">Sales Reporting</div>
+              <div class="card-body d-flex flex-column justify-content-center">
+                  <div class="chart-bar"><canvas id="myBarChart" width="100%" height="30"></canvas></div>
+              </div>
+              <div class="card-footer position-relative">
+                  <a class="stretched-link" href="#!">
+                      <div class="text-xs d-flex align-items-center justify-content-between">
+                          View More Reports
+                          <i class="fas fa-long-arrow-alt-right"></i>
+                      </div>
+                  </a>
+              </div>
+          </div>
+      </div>
+      <div class="col-lg-6 mb-3">
+          <!-- Pie chart example-->
+          <div class="card h-100">
+              <div class="card-header">Traffic Sources</div>
+              <div class="card-body">
+                  <div class="chart-pie mb-4"><canvas id="myPieChart" width="100%" height="50"></canvas></div>
+                  <div class="list-group list-group-flush">
+                      <div class="list-group-item d-flex align-items-center justify-content-between small px-0 py-2">
+                          <div class="me-3">
+                              <i class="fas fa-circle fa-sm me-1 text-blue"></i>
+                              Direct
+                          </div>
+                          <div class="fw-500 text-dark">55%</div>
+                      </div>
+                      <div class="list-group-item d-flex align-items-center justify-content-between small px-0 py-2">
+                          <div class="me-3">
+                              <i class="fas fa-circle fa-sm me-1 text-purple"></i>
+                              Social
+                          </div>
+                          <div class="fw-500 text-dark">15%</div>
+                      </div>
+                      <div class="list-group-item d-flex align-items-center justify-content-between small px-0 py-2">
+                          <div class="me-3">
+                              <i class="fas fa-circle fa-sm me-1 text-green"></i>
+                              Referral
+                          </div>
+                          <div class="fw-500 text-dark">30%</div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  </div>
+{%endblock%}
+
+{%block footer%}
+
+{%endblock%}
