Modificar inicio_calidad.html

--- a/SisCoVaPro/materia_prima/templates/home.html
+++ b/SisCoVaPro/materia_prima/templates/home.html
@@ -30,7 +30,7 @@ Materia Prima
       </div>
       <div class="col-xl-4 mb-4 align-content-center">
         <!-- Dashboard example card 3 -->
-        <a class="card lift h-100" href="{%url 'materia_prima:control_de_calidad'%}">
+        <a class="card lift h-100" href="{%url 'materia_prima:ControlCalidadView'%}">
           <div class="card-body d-flex justify-content-center flex-column">
             <div class="d-flex align-items-center justify-content-between">
               <div class="me-3">
@@ -110,7 +110,7 @@ Materia Prima
       </div>
   </div>
   </div>
-{%endblock%}
+  {%endblock%}
 
 {%block footer%}
 
