--- a/SisCoVaPro/templates/base.html
+++ b/SisCoVaPro/templates/base.html
@@ -45,10 +45,12 @@
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
 
+  {%block preloader%}
   <!-- Preloader -->
   <div class="preloader flex-column justify-content-center align-items-center">
     <img class="animation__wobble" src="{% static 'img/loaderLiconsa.png'%}" alt="logoLiconsa" height="60" width="60">
   </div>
+  {%endblock%}
 
   <!-- Navbar -->
   <nav class="main-header navbar navbar-expand navbar-white navbar-light">
