Eliminar bloque footer

--- a/SisCoVaPro/materia_prima/templates/home.html
+++ b/SisCoVaPro/materia_prima/templates/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Materia Prima
+Inicio
 {% endblock %}
 
 
@@ -112,6 +112,3 @@ Materia Prima
   </div>
   {%endblock%}
 
-{%block footer%}
-
-{%endblock%}
